# DentalMind

./: .gitignore  A100_GUIDE.md  DATASETS.md  PROMPT.md  README.md  check_datasets_status.py  download_datasets_fixed.py  download_roboflow.py  get_datasets.ps1
dentalmind-web/: package-lock.json  package.json  tailwind.config.ts
dentalmine/: README.md  cli.py  config_loader.py  paths.py  pyproject.toml  requirements.txt
dentalmine/config/: default.yaml
dentalmine/data/loaders/: cbct_loader.py  image_loader.py
dentalmine/data/quality/: quality_gate.py
dentalmine/models/backbone/: dentvfm.py
dentalmine/models/heads/: bitewing_head.py  cbct_head.py  panoramic_head.py  periapical_head.py  zeroshot_region_head.py
dentalmine/models/madclip/: c1_slice_attention.py  c2_consistency.py  c3_clustering.py  c4_prompts.py
dentalmine/models/medclip/: base.py  biomedclip.py  medclip_factory.py  mmkd_clip.py  stub.py
dentalmine/models/segmentation/: nnunet_wrapper.py
dentalmine/pipeline/: evaluate.py  inference_engine.py  overlay_renderer.py  postprocessor.py  preprocessor.py  router.py  serve.py
dentalmine/schema/: finding.py  patient.py  prompt.py
dentalmine/scripts/: tufts_to_yolo.py
dentalmine/templates/: treatment_templates.yaml
dentalmine/tests/: test_c1_c2_cbct.py  test_madclip.py  test_nnunet.py  test_pipeline_e2e.py  test_schemas.py  test_serve_eval.py  test_training_helpers.py
dentalmine/training/: baseline_clip_2d3d.py  clip_finetune.py  phase1_pretrain.py  phase2_c1_adapter.py  phase3_multitask.py  phase4_distillation.py  trainer_base.py
(+47 files in other folders)
